# octane

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  QUICKSTART.md  QUICK_START_TUI_IMPROVEMENTS.md  README.md  TUI_IMPROVEMENTS.md  build.rs  pyproject.toml  python_benchmarks.json
.github/: DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml  release.yml
benches/: env_benchmark.rs  gpu_benchmark.rs  mlx_benchmark.rs  ppo_benchmark.rs
benchmarks/: python_baseline.py  rust_env_bench.txt  rust_ppo_bench.txt  visualize.py  visualize_gpu.py
docs/: BENCHMARKS.md  MLX.md  REGRESSION_AUDIT.md  REVIEW.md  bench_baseline_v0.1.0.txt  review_findings.json
examples/: array_env_demo.rs  benchmark_vs_sb3.rs  cartpole_ppo.rs  pendulum_sac.rs  trading_metrics_demo.rs  trading_ppo.rs  web_dashboard.rs
python/octane/: __init__.py  octane_rs.pyi
src/: checkpoint.rs  lib.rs  mlx_experiment.rs  tuning.rs
src/algorithms/: a2c.rs  agent.rs  config.rs  cql.rs  ddpg.rs  dqn.rs  iqn.rs  metrics.rs  mod.rs  ppg.rs  ppo.rs  redq.rs  rollout.rs  sac.rs  td3.rs  traits.rs
src/backtesting/: cross_validation.rs  mod.rs  monte_carlo.rs  walk_forward.rs
src/buffer/: her.rs  mmap.rs  mod.rs  nstep.rs  replay.rs  segment_tree.rs
src/core/: device.rs  error.rs  mod.rs  precision.rs  tensor.rs
src/distributed/: mod.rs
src/distributions/: categorical.rs  gaussian.rs  mod.rs
src/envs/: array_env.rs  classic_control.rs  gym.rs  mod.rs  multiagent.rs  space.rs  trading.rs  traits.rs  vecenv.rs  wrappers.rs
src/live/: error.rs  execution.rs  mod.rs  monitor.rs  paper.rs  types.rs
src/live/exchanges/: binance.rs  bybit.rs  mod.rs
src/logging/: metrics.rs  mod.rs  tensorboard.rs  wandb.rs
src/metal/: rl_kernels.metal
src/metrics/: README.md  attribution.rs  journal.rs  mod.rs  trading.rs
src/networks/: actor_critic.rs  attention.rs  init.rs  mlp.rs  mod.rs  normalization.rs  rnn.rs  transformer.rs
src/profiling/: mod.rs
src/python/: mod.rs
src/risk/: constraints.rs  drawdown.rs  mod.rs  position_sizing.rs  rewards.rs
src/simd/: buffer_ops_neon.c  buffer_ops_neon.h  categorical_neon.c  categorical_neon.h  gae.rs  gae_neon.c  gae_neon.h  gaussian_neon.c  gaussian_neon.h  log_prob.rs  metal.rs  mod.rs  td_error.rs  x86.rs
src/strategies/: ensemble.rs  hierarchical.rs  imitation.rs  meta.rs  mod.rs
src/trading/: env.rs  error.rs  mod.rs  multi_asset.rs  multi_timeframe.rs  regime.rs
src/tui/: app.rs  event.rs  input.rs  layout.rs  log_reader.rs  mod.rs  screens.rs  theme.rs  ui.rs
src/tui/widgets/: benchmark.rs  charts.rs  logo.rs  metrics.rs  mod.rs  training.rs
src/web/: assets.rs  mod.rs  server.rs  state.rs  system.rs
src/web/static/: index.html
