[package]
name = "rocket-rs"
version = "0.1.0"
edition = "2021"
authors = ["RocketRL Team"]
description = "High-performance Reinforcement Learning library for Rust, optimized for Apple Silicon and NVIDIA GPUs"
license = "GPL-2.0"
repository = "https://github.com/lubluniky/rocket-rs"
keywords = ["reinforcement-learning", "machine-learning", "gpu", "trading", "hpc"]
categories = ["science", "algorithms"]

[features]
default = ["cpu"]
cpu = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
full = ["metal", "cuda"]

[dependencies]
# Tensor Backend - Candle (HuggingFace)
candle-core = "0.8"
candle-nn = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# Async (optional for I/O bound tasks)
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"], optional = true }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Numerical utilities
num-traits = "0.2"
ordered-float = "4.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.38"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.24.0"

[[bench]]
name = "env_benchmark"
harness = false

[[bench]]
name = "ppo_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[[bin]]
name = "rocket-tui"
path = "src/bin/rocket_tui.rs"
