[package]
name = "octane-rs"
version = "0.1.0"
edition = "2021"
authors = ["Octane Team"]
description = "High-performance Reinforcement Learning library for Rust, optimized for Apple Silicon and NVIDIA GPUs"
license = "GPL-2.0"
repository = "https://github.com/lubluniky/rocket-rs"
keywords = ["reinforcement-learning", "machine-learning", "gpu", "trading", "hpc"]
categories = ["science", "algorithms"]

[features]
default = ["cpu"]
cpu = []
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
simd = []  # Enable NEON SIMD optimizations (Apple Silicon)
avx2 = []  # Enable AVX2 SIMD optimizations (x86_64)
avx512 = ["avx2"]  # Enable AVX-512 SIMD optimizations (x86_64, implies avx2)
gym = ["dep:pyo3"]  # Python Gym/Gymnasium compatibility
wandb = ["dep:pyo3"]  # Weights & Biases integration (requires Python wandb)
distributed = ["dep:tokio", "dep:tonic", "dep:prost", "dep:parking_lot"]  # Distributed training support
grpc = ["distributed"]  # gRPC backend for distributed training
half = ["dep:half"]  # Half-precision floating point support
full = ["metal", "cuda", "simd", "avx2", "half"]

[dependencies]
# Tensor Backend - Candle (HuggingFace)
candle-core = "0.8"
candle-nn = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# Async (optional for I/O bound tasks)
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"], optional = true }

# Async trait support (for exchange connectors)
async-trait = "0.1"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Numerical utilities
num-traits = "0.2"
ordered-float = "4.0"

# Memory-mapped files for large buffers
memmap2 = "0.9"

# Python interop (optional, for Gym compatibility)
pyo3 = { version = "0.24.1", optional = true }

# Distributed training (optional)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
parking_lot = { version = "0.12", optional = true }  # Fast mutex for async env stepping

# Half-precision support (optional)
half = { version = "2.4", optional = true, features = ["std", "serde"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.39"

# Platform-specific
libc = "0.2"

# Metal GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.24.0"

[[bench]]
name = "env_benchmark"
harness = false

[[bench]]
name = "ppo_benchmark"
harness = false

[[bench]]
name = "gpu_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[[bin]]
name = "octane-tui"
path = "src/bin/octane_tui.rs"
