[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "octane-rl"
version = "0.4.0"
description = "High-Performance Reinforcement Learning for Trading - Rust-powered Python library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Octane Team" }
]
keywords = [
    "reinforcement-learning",
    "machine-learning",
    "trading",
    "algorithmic-trading",
    "quantitative-finance",
    "rust",
    "high-performance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/lubluniky/rocket-rs"
Repository = "https://github.com/lubluniky/rocket-rs"
Documentation = "https://github.com/lubluniky/rocket-rs#readme"

[tool.maturin]
# Build for the python module
python-source = "python"
module-name = "octane.octane_rs"
features = ["pyo3/extension-module"]
# Strip debug symbols for smaller wheels
strip = true

# Build settings
[tool.maturin.target.x86_64-apple-darwin]
macos-deployment-target = "10.12"

[tool.maturin.target.aarch64-apple-darwin]
macos-deployment-target = "11.0"
